--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <nav class="flex jb">
         <div>
-          <a href="#"><span>WEDO</span><span>MAPS</span></a>
+          <a href="#"><span class="bl">WEDO</span><span>MAPS</span></a>
         </div>
 
         <div class="navs">
@@ -54,7 +54,8 @@
 
         <div class="annouc flex">
           <div>
-            <iframe width="500" height="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3604.903010013692!2d-49.21484198557593!3d-25.374566883813888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce619be5e20a9%3A0xafa21241d443fea9!2sEstr.+das+Olarias+-+Boa+Vista%2C+Curitiba+-+PR%2C+81540-160!5e0!3m2!1spt-PT!2sbr!4v1546178844102"></iframe>
+            <H1>IMAGEM</H1>
+            <!-- <iframe width="500" height="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3604.903010013692!2d-49.21484198557593!3d-25.374566883813888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce619be5e20a9%3A0xafa21241d443fea9!2sEstr.+das+Olarias+-+Boa+Vista%2C+Curitiba+-+PR%2C+81540-160!5e0!3m2!1spt-PT!2sbr!4v1546178844102"></iframe> -->
           </div>
           <div>
             <form action="">
@@ -63,7 +64,7 @@
                   <input type="email" placeholder="E-mail"> 
                   <input type="text" placeholder="(41) 9999- 5999"> 
                   <input type="text" placeholder="Assunto"> 
-                  <textarea name="" id="" cols="30" rows="10"></textarea>
+                  <textarea name="" id="" cols="30"></textarea>
                   <button type="submit">Enviar</button>
               </div>
             </form>
@@ -77,8 +78,8 @@
       <div class="container flex footer jb">
         <div><p>2018 - Todos os direitos reservados.</p></div>
         <div class="social-links">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-facebook-f fa-2x"></i></a>
+          <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
         </div>
       </div> 
     </footer>
