--- a/web/pages/destaques.html
+++ b/web/pages/destaques.html
@@ -10,25 +10,26 @@
 <body>
 
   
-  <div class="container">
-    <nav class="flex jc">
-      <div>
-        <a href="#"><span>WEDO</span><span>MAPS</span></a>     
-      </div>
+ 
+  <header>
+    <div class="container">
+      <nav class="flex jb">
+        <div>
+          <a href="#"><span>WEDO</span><span>MAPS</span></a>
+        </div>
 
-      <div>
-        <a href="../index.html">Inicio</a>
-          
-        <a href="quem-somos.html">Quem Somos</a>
-  
-        <a href="contatos.html">Contatos</a>
-    
-        <a href="destaques.html">Destaques</a>
-  
-        <a href="login.html">LOGIN</a> 
-      </div>
-    </nav>
-  </div>
+        <div class="navs">
+          <a href="../index.html">Inicio</a>
+          <a href="quem-somos.html">Quem Somos</a>
+          <a href="contatos.html">Contatos</a>
+          <a href="destaques.html">Destaques</a>
+          <a href="login.html">Login</a>
+        </div>
+      </nav>
+    </div>
+
+   </header>
+
 
 <script src="assets/js/script.js"></script>  
 </body>
