starting adaptions responsive for mobile

--- a/web/pages/contatos.html
+++ b/web/pages/contatos.html
@@ -6,6 +6,7 @@
   <title>Contato | WedoMaps</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
   <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="stylesheet" href="../assets/css/contatos.css">
 </head>
 <body>
   
@@ -31,29 +32,30 @@
 
    <main>
     <div class="container">
-      <div class="title">
-        <h1>SEJA UM ANUNCIANTE!</h1>
-        <p>Preencha o formulário e um dos nossos representantes entrará em contato com você.</p>
-      </div>
-
-      <div class="annouc flex">
-        <div>
-          <iframe width="500" height="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3604.903010013692!2d-49.21484198557593!3d-25.374566883813888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce619be5e20a9%3A0xafa21241d443fea9!2sEstr.+das+Olarias+-+Boa+Vista%2C+Curitiba+-+PR%2C+81540-160!5e0!3m2!1spt-PT!2sbr!4v1546178844102"></iframe>
+      <div class="content_contatos">
+        <div class="title">
+          <h1>SEJA UM ANUNCIANTE!</h1>
+          <p>Preencha o formulário e um dos nossos representantes entrará em contato com você.</p>
         </div>
-        <div>
-          <form action="">
-            <div class="form-control-email">
-                <input type="text" placeholder="Nome"> 
-                <input type="email" placeholder="E-mail"> 
-                <input type="text" placeholder="(41) 9999- 5999"> 
-                <input type="text" placeholder="Assunto"> 
-                <textarea name="" id="" cols="30"></textarea>
-                <button type="submit">Enviar</button>
-            </div>
-          </form>
+  
+        <div class="annouc flex">
+          <div>
+            <iframe width="500" height="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3604.903010013692!2d-49.21484198557593!3d-25.374566883813888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce619be5e20a9%3A0xafa21241d443fea9!2sEstr.+das+Olarias+-+Boa+Vista%2C+Curitiba+-+PR%2C+81540-160!5e0!3m2!1spt-PT!2sbr!4v1546178844102"></iframe>
+          </div>
+          <div>
+            <form action="">
+              <div class="form-control-email">
+                  <input type="text" placeholder="Nome"> 
+                  <input type="email" placeholder="E-mail"> 
+                  <input type="text" placeholder="(41) 9999- 5999"> 
+                  <input type="text" placeholder="Assunto"> 
+                  <textarea name="" id="" cols="30"></textarea>
+                  <button type="submit">Enviar</button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
-
     </div>
   </main>
 
