--- a/web/pages/destaques.html
+++ b/web/pages/destaques.html
@@ -6,11 +6,11 @@
   <title>Destaques | WedoMaps</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
   <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="stylesheet" href="../assets/css/destaques.css">
 </head>
 <body>
 
-  
- 
+
   <header>
     <div class="container">
       <nav class="flex jb">
@@ -27,8 +27,44 @@
         </div>
       </nav>
     </div>
-
    </header>
+
+   <main>
+    <div class="content_destaques">
+     <div class="container">
+       
+        <h1 class="tc">Projetos</h1>
+        <hr>
+         <div class="flex destaques_item">
+           <div class="col-1">
+            <img src="../assets/images/destaque_default.png" alt="Destaque">
+           </div>
+           <div class="col-3">
+            <h2>Nome do Seu Evento.</h2>
+            <h3><a href="#" class="bl">Clique aqui para informações</a></h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque, earum nostrum quasi repellendus maiores, iste maxime consectetur eveniet omnis reprehenderit aut dignissimos eos tempora atque. Fuga quis ex aliquid iure, deleniti temporibus magni neque. Quibusdam pariatur praesentium saepe, vel voluptate consectetur ab aliquid rem consequuntur! Nisi delectus aliquam dolores sit error! Quasi exercitationem tempore tenetur quod est necessitatibus, amet tempora accusamus maxime soluta eaque ratione qui facere labore dolores sapiente voluptatem illum minima unde repellat deserunt quas. Quam corporis quisquam odio itaque voluptatibus provident incidunt cumque placeat, dicta deleniti mollitia aliquam. Iste suscipit sint, quae ullam, inventore corrupti est quibusdam quo debitis ducimus non dolor provident doloribus minima, autem vero sunt mollitia quaerat! Adipisci, quos voluptas, necessitatibus voluptate enim, aperiam quasi molestias nesciunt ratione quo qui pariatur eum distinctio iste. Eos tenetur consequatur ex, obcaecati ducimus voluptas ut asperiores fugiat vitae perferendis laborum ullam voluptatum voluptates a aut dignissimos reprehenderit dolore temporibus nemo illo accusantium. Dolores aut quod repellendus deserunt voluptates rerum incidunt enim quibusdam amet accusamus obcaecati veritatis, distinctio dolorum unde aperiam provident accusantium libero ut id tempore molestias ipsa vero eaque delectus. Eaque obcaecati vitae molestiae voluptatibus incidunt rerum. Laudantium, quo. Voluptatum autem ad aliquam quidem tenetur consectetur unde, quam maxime excepturi suscipit quas? Aliquid quisquam ipsa qui tempora consectetur porro unde nulla hic sint aperiam. Iusto, possimus at quo beatae voluptas exercitationem nobis, adipisci alias architecto corporis eius! Ipsum, autem. Consequuntur, sint? Amet officia explicabo ab eligendi, odit distinctio beatae, aliquam aut nihil animi numquam commodi. Sequi pariatur molestias expedita voluptatem, tenetur quam odit, facilis distinctio praesentium dolor dolorem deserunt saepe aspernatur ea. Officiis illum magni numquam dolorum dignissimos alias nostrum neque suscipit cupiditate animi illo ipsa tempora quae quaerat quasi iste ipsam, ducimus inventore fugiat natus! Animi sint labore ratione pariatur eveniet nesciunt velit adipisci numquam!</p>
+            <ul>
+              <li>End: </li>
+              <li>Cidade: </li>
+              <li>Whats: </li>
+              <li>Telefone: </li>
+            </ul>
+           </div>
+         </div>
+       </div>
+     </div>
+   </main>
+
+   <footer>
+    <div class="container flex footer jb">
+      <div><p>2018 - Todos os direitos reservados.</p></div>
+      <div class="social-links">
+        <a href="#"><i class="fab fa-facebook-f fa-2x"></i></a>
+        <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+      </div>
+    </div> 
+  </footer>
+
 
 
 <script src="assets/js/script.js"></script>  
