--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     
+    <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/home.css" />
   </head>
   <body>
@@ -54,8 +55,7 @@
 
         <div class="annouc flex">
           <div>
-            <H1>IMAGEM</H1>
-            <!-- <iframe width="500" height="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3604.903010013692!2d-49.21484198557593!3d-25.374566883813888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce619be5e20a9%3A0xafa21241d443fea9!2sEstr.+das+Olarias+-+Boa+Vista%2C+Curitiba+-+PR%2C+81540-160!5e0!3m2!1spt-PT!2sbr!4v1546178844102"></iframe> -->
+             <iframe width="500" height="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3604.903010013692!2d-49.21484198557593!3d-25.374566883813888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce619be5e20a9%3A0xafa21241d443fea9!2sEstr.+das+Olarias+-+Boa+Vista%2C+Curitiba+-+PR%2C+81540-160!5e0!3m2!1spt-PT!2sbr!4v1546178844102"></iframe>
           </div>
           <div>
             <form action="">
