--- a/web/pages/quem-somos.html
+++ b/web/pages/quem-somos.html
@@ -30,7 +30,7 @@
 
    <main class="quem_somos">
     <div class="container tc">
-      <div class="content">
+      <div class="content_quem_somos">
         <h1>QUEM SOMOS</h1>
 
         <h2><strong>Nosso propósito é fazer uma ponte entre empresas e consumidores das cidades ao redor de Curitiba.</strong></h2>
